src/objects/Canned_Message_Metadata__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Chevron_Footer__c</fullName>
        <label>Chevron Footer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chevron_Header__c</fullName>
        <label>Chevron Header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Spectrum_Footer__c</fullName>
        <label>Spectrum Footer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Spectrum_Header__c</fullName>
        <label>Spectrum Header</label>
        <type>TextArea</type>
    </fields>
    <label>Canned Message Metadata</label>
</CustomObject>